--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "dependencies": {
     "angular": "~1.3.0",
     "angular-resource": "^1.4.7",
-    "angular-ui-router": "~0.2.11",
     "angular-ui-bootstrap": "^0.14.3",
+    "angular-ui-router": "~0.2.11",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.9.0",
     "bootstrap": "^3.3.5",
@@ -53,6 +53,7 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0"
+    "vinyl-source-stream": "^1.0.0",
+    "xlsx": "^0.8.0"
   }
 }
