--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "mongoose": "^4.2.4",
     "mongoose-seed": "^0.1.5",
     "morgan": "~1.4.0",
+    "node-uuid": "^1.4.7",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "vinyl-buffer": "^1.0.0",
