--- a/package.json
+++ b/package.json
@@ -15,19 +15,17 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "angular": "~1.3.0",
-    "angular-resource": "^1.4.7",
-    "angular-ui-bootstrap": "^0.14.3",
-    "angular-ui-router": "~0.2.11",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.9.0",
     "bootstrap": "^3.3.5",
     "browserify": "^6.1.0",
+    "c3": "^0.4.10",
     "connect-flash": "^0.1.1",
     "connect-livereload": "~0.5.0",
     "cookie-parser": "^1.3.3",
     "express": "~4.9.8",
     "express-session": "^1.9.1",
+    "flux": "^2.1.1",
     "gulp": "~3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-browserify": "^0.5.1",
@@ -36,12 +34,16 @@
     "gulp-csscomb": "^3.0.6",
     "gulp-cssjoin": "^0.1.2",
     "gulp-jshint": "^1.8.6",
+    "gulp-less": "^3.0.5",
     "gulp-livereload": "^2.1.1",
     "gulp-nodemon": "^1.0.4",
+    "gulp-react": "^3.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "~1.3.3",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
+    "history": "^1.13.1",
     "lodash": "^2.4.1",
     "mapbox-gl": "^0.11.2",
     "mapbox.js": "^2.2.3",
@@ -53,6 +55,14 @@
     "node-uuid": "^1.4.7",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "react": "^0.13.3",
+    "react-bootstrap": "0.26.x",
+    "react-grid-layout": "^0.8.5",
+    "react-loader": "^1.4.0",
+    "react-loaders": "^1.2.3",
+    "react-router": "^1.0.0-rc1",
+    "reactify": "^1.1.1",
+    "superagent": "^1.4.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "xlsx": "^0.8.0"
