--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "gulp-util": "^3.0.7",
     "history": "^1.13.1",
     "lodash": "^2.4.1",
+    "mammoth": "^0.3.27",
     "mapbox-gl": "^0.11.2",
     "mapbox.js": "^2.2.3",
     "mers": "^0.14.1",
