--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "connect-flash": "^0.1.1",
     "connect-livereload": "~0.5.0",
     "cookie-parser": "^1.3.3",
+    "dotenv": "^1.2.0",
     "express": "~4.9.8",
     "express-session": "^1.9.1",
     "flux": "^2.1.1",
+    "google-spreadsheets": "^0.5.0",
+    "googleapis": "^2.1.6",
     "gulp": "~3.8.8",
     "gulp-autoprefixer": "^1.0.1",
     "gulp-browserify": "^0.5.1",
@@ -44,11 +47,11 @@
     "gulp-uglify": "^1.4.2",
     "gulp-util": "^3.0.7",
     "history": "^1.13.1",
-    "marked": "^0.3.5",
     "lodash": "^2.4.1",
     "mammoth": "^0.3.27",
     "mapbox-gl": "^0.11.2",
     "mapbox.js": "^2.2.3",
+    "marked": "^0.3.5",
     "mers": "^0.14.1",
     "method-override": "~2.3.0",
     "mongoose": "^4.2.4",
@@ -57,6 +60,7 @@
     "node-uuid": "^1.4.7",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
+    "promise": "^7.0.4",
     "react": "^0.13.3",
     "react-bootstrap": "0.26.x",
     "react-grid-layout": "^0.8.5",
@@ -64,6 +68,7 @@
     "react-loaders": "^1.2.3",
     "react-router": "^1.0.0-rc1",
     "reactify": "^1.1.1",
+    "request": "^2.67.0",
     "superagent": "^1.4.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
