--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.5",
     "browserify": "^6.1.0",
     "c3": "^0.4.10",
+    "cloudinary": "^1.2.6",
     "connect-flash": "^0.1.1",
     "connect-livereload": "~0.5.0",
     "cookie-parser": "^1.3.3",
@@ -54,6 +55,7 @@
     "marked": "^0.3.5",
     "mers": "^0.14.1",
     "method-override": "~2.3.0",
+    "mkdirp": "^0.5.1",
     "mongoose": "^4.2.4",
     "mongoose-seed": "^0.1.5",
     "morgan": "~1.4.0",
