--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "description": "Minimal MEAN app built for Urban Biofilter's Adapt Oakland project.",
   "main": "server.js",
-  "author": "Ivan <vanecat@gmail.com>",
   "repository": "https://github.com/vanecat/adaptoak.git",
   "engines": {
     "node": "0.12"
@@ -11,6 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prestart": "npm install",
+    "jsdoc": "node_modules/.bin/jsdoc --configure jsdoc.json",
     "postinstall": "node node_modules/gulp/bin/gulp build",
     "start": "node server.js"
   },
@@ -75,5 +75,8 @@
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "xlsx": "^0.8.0"
+  },
+  "devDependencies":{
+    "jsdoc": "^3.4.0"
   }
 }
