--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browserify": "^6.1.0",
     "c3": "^0.4.10",
     "cloudinary": "^1.2.6",
+    "compression": "^1.6.1",
     "connect-flash": "^0.1.1",
     "connect-livereload": "~0.5.0",
     "cookie-parser": "^1.3.3",
